[tool.poetry]
name = "yew"
version = "0.1.0"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.extras]
asyncio = ["aiofiles"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
ruff = "^0.0.292"
black = "^23.9.1"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.ruff]
line-length = 120

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
